Labels fix and margin below Full Alarm tile fix (#47)
* fix(Sidebar): This fixes the label placement by wrapping the div with overflow hidden...

* fix(FullStatistics): Fixes bug where padding on top caused whitespace below the app.

--- a/src/components/FullLayout.css
+++ b/src/components/FullLayout.css
@@ -61,6 +61,10 @@
   width: 195px;
   z-index: 999990;
 }
+.SidebarItemWrapper {
+  position: relative;
+  text-align: center;
+}
 .SidebarItem {
   width: 150px;
   height: 150px;
@@ -81,8 +85,12 @@
   position: absolute;
   bottom: -22px;
   text-align: center;
-  width: 100%;
+  width: 90%;
+  left: 10px;
   font-size: 12px;
   color: #747474;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
