--- a/src/components/FullStatistics.css
+++ b/src/components/FullStatistics.css
@@ -3,7 +3,6 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  padding: 100px 0 0 0;
 }
 .Number {
   font-size: 125px;
